--- a/src/app/cs-nav/cs-nav.component.html
+++ b/src/app/cs-nav/cs-nav.component.html
@@ -22,7 +22,7 @@
         *ngIf="isHandset$ | async">
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>
-      <span>Route Title Here</span>
+      <span> - </span>
     </mat-toolbar>
     <router-outlet></router-outlet>
   </mat-sidenav-content>
