--- a/src/app/cs-dashboard/dashboard.component.html
+++ b/src/app/cs-dashboard/dashboard.component.html
@@ -17,7 +17,9 @@
         </mat-card-header>
         <mat-card-content class="dashboard-card-content">
           <div>
-            <figure><embed [src]="card.figure" /></figure>
+            <figure>
+              <embed [src]="card.figure"/>
+            </figure>
           </div>
         </mat-card-content>
       </mat-card>
