--- a/main.css
+++ b/main.css
@@ -5,7 +5,7 @@ html,body{
 }
 
 body{
-  background-image: url('https://i.imgur.com/nqgOp7k.jpg');
+  background-image: url("https://i.imgur.com/PbqheB2.jpg"), url("/Blog/images/bg.jpg");
   background-size: contain;
   background-position: center;
   background-repeat: repeat;
